<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Zebpay Tic Tac Toe</string>
    <string name="verify_phone_screen_header_title">Login</string>
    <string name="verify_phone_screen_note_lbl_title">Disclaimer</string>
    <string name="verify_phone_screen_note_lbl_description">Trading in cryptocurrencies is subject
        to market, technical, and legal risks.</string>
    <string name="verify_phone_screen_lbl_agree_terms_and_conditions">I have read and understood
        the </string>
    <string name="verify_phone_screen_btn_accept_and_continue">Proceed Securely</string>
    <string name="verify_phone_screen_lbl_desc_1">ZebPay will send a verification code by SMS to your mobile number. Carrier charges may apply.
    </string>
    <string name="register">Create one here!</string>
    <string name="don_t_have_an_account">No account? Create one here</string>
    <string name="verify_phone_screen_lbl_desc_2">Please select your country and enter
        your mobile number.</string>
    <string name="verify_phone_screen_number_txt_placeHolder">Mobile number</string>
    <string name="alert_msg_mobile_number_length_validation">Please enter your mobile number
    </string>
    <string name="alert_msg_mobile_number_validation">Please enter your mobile number
        without any space or special character</string>
    <string name="alert_msg_accept_terms_and_privacy">Please read and accept the Terms of Use &amp;
        Privacy Policy to get started.</string>
    <string name="alert_msg_select_country">Select Country</string>
    <string name="alert_msg_mobile_number_0_prefix">Kindly remove \'0\' prefix from your number.
    </string>
    <string name="verify_mobile_number_screen_header_title">Set Account PIN</string>
    <string name="verify_mobile_number_screen_lbl_desc_1">Mobile number verified</string>
    <string name="verify_mobile_number_screen_lbl_desc_2">Next you\'ll create a 4-digit pin for account security.</string>
    <string name="verify_mobile_number_screen_lbl_desc_3">Please do not share your PIN with anyone.
        ZebPay will never ask for your PIN.</string>
    <string name="verify_mobile_number_screen_lbl_desc_3_new">Keep your PIN secret! No ZebPay representative will ever ask for your PIN. Beware of fake social media accounts or email scams. </string>
    <string name="oops">"Oops"</string>
    <string name="try_again">"Try Again"</string>
    <string name="something_went_wrong">"Something went wrong"</string>
    <string name="try_verify_number">"We tried to verify your number"</string>
    <string name="support_ticket">"For support, please go to"</string>
    <string name="ticket_zebpay_com">"help.zebpay.com"</string>
    <string name="verify_mobile_number_screen_setupPIN_btn_title">Next: Set your PIN</string>
    <string name="title_verification_error">Verification Error</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp_screen_header_title">Enter Verification Code</string>
    <string name="enter_otp_screen_txt_placeHolder">Verification code</string>
    <string name="enter_otp_screen_verify_btn_title">Verify</string>
    <string name="enter_otp_screen_lbl_desc">Please enter the verification code sent to</string>
    <string name="alert_msg_otp_validation">Please enter the verification code.</string>
    <string name="alert_msg_otp_number_validation">Oops! The code you entered is invalid. Please check the SMS and try again.</string>
    <string name="call_me">Call Me</string>
    <string name="didn_t_get_a_verification_code_nget_verified_via_call_after">Didn\'t get the code?\nWhen the timer ends, tap the Call Me button and we\'ll call you.</string>
    <string name="verify_pin_screen_header_title_new_user">Set Account PIN</string>
    <string name="verify_pin_screen_lbl_desc_new_user_confirm_pin">Confirm the 4 digit PIN</string>
    <string name="verify_pin_screen_lbl_desc_new_user">Enter 4 digit PIN</string>
    <string name="alert_msg_pin_and_confirm_pin_not_matched">PIN does not match.</string>
    <string name="alert_msg_pin_improve">Please choose a stronger PIN to secure your account.
    </string>
    <string name="title_set_up_fingerprint">Set Up Fingerprint</string>
    <string name="message_use_fingerprint_for_zebpay_pin">Use Fingerprint instead of PIN?</string>
    <string name="destination_tag">Tag</string>
    <string name="HLP3_dynamic">Enter a name for this %1$s on this %1$s address. A QR code icon will appear.\n\nTap that icon to show the QR code so the sender can scan it. You can also copy the address and share it by email or message.
    </string>
    <string name="title_receive_currency">Receive %1$s</string>
    <string name="title_add_new_currency_address">Add New %1$s Address</string>
    <string name="title_update_currency_address">Update %1$s Address</string>
    <string name="title_new_receiving_address">New Receiving Address</string>
    <string name="share_your_currency_address">Share your %1$s address</string>
    <string name="this_is_my_currency_address">This is my %1$s address : \n %2$s</string>
    <string name="currency_address_already_exist">This address already exists.</string>
    <string name="success_email_text">A verification email has been sent to %1s. Please check your inbox and verify your
        email address.
    </string>
    <string name="share_this_currency_address_to_receive_payments">Share this %1$s address to receive %1$s in your ZebPay wallet.
    </string>
    <string name="cancel">"Cancel"</string>
    <string name="ok">"OK"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="zendesk_help_center">"Help Center"</string>
    <string name="zendesk_createticket">"Create a ticket"</string>
    <string name="zendesk_mytickets">"My tickets"</string>
    <string name="zendesk_chat_bot">"Chat"</string>
    <string name="support_desc_chat">"Use the Chatbot to find resolutions, self serve &amp; raise tickets."</string>
    <string name="support_desc_create_ticket">"Raise a ticket if unable to Self  Serve"</string>
    <string name="support_desc_my_ticket">"View the current status of your unresolved tickets"</string>
    <string name="support_desc_help">"Self serve for instant resolutions"</string>
    <string name="hint_first_name">"First name"</string>
    <string name="hint_last_name">"Last name"</string>
    <string name="please_enter_email_id">Email address</string>
    <string name="please_enter_your_email_address">Please enter your email address.</string>
    <string name="please_enter_valid_email_address">Please enter valid email address.</string>
    <string name="you_have_not_changed_anything">You haven\'t changed anything</string>
    <string name="image_not_uploaded">Images upload unsuccessfully. Please try again.</string>
    <string name="uploading">Uploading…</string>
    <string name="profile">Profile</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="save">Save</string>
    <string name="please_enter_name">Please enter your name.</string>
    <string name="invalid_name">Please enter your name without any spaces or special characters.</string>
    <string name="enter_existing_pin_verify_account">Please enter your PIN to verify your account.</string>
    <string name="attempt_remaining">" attempts remaining."</string>
    <string name="confirm_your_pin">Confirm your PIN</string>
    <string name="enter_correct_password">Incorrect PIN</string>
    <string name="problem_in_capturing_image">Problem in capturing image.</string>
    <string name="problem_in_selecting_image">Problem in selecting image.</string>
    <string name="auto_fill_or">Or enter them below</string>
    <string-array name="auto_email_suggestion_list">
        <item>"@gmail.com"</item>
        <item>"@yahoo.com"</item>
        <item>"@yahoo.co.in"</item>
        <item>"@rediffmail.com"</item>
        <item>"@hotmail.com"</item>
        <item>"@yahoo.in"</item>
        <item>"@outlook.com"</item>
        <item>"@ymail.com"</item>
        <item>"@live.com"</item>
        <item>"@icloud.com"</item>
        <item>"@live.in"</item>
        <item>"@rocketmail.com"</item>
        <item>"@rediff.com"</item>
    </string-array>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="dilog_play_store_rating_title">"Rate Our App"</string>
    <string name="dilog_play_store_rating_desc">"Your feedback is very valuable to us.
        Would you like to rate our app on Play Store?"</string>
    <string name="zebpay">ZebPay</string>
    <string name="india">India</string>
    <string name="notes">Notes</string>
    <string name="simple_secure_bitcoin">Simple secure bitcoin</string>
    <string name="_1_complete_payment_within_4_hours">1) Complete the payment within 4 hours.
    </string>
    <string name="_2_do_payment_via_neft_imps_or_rtgs_only">2) Make payment via NEFT, IMPS
        or RTGS only.</string>
    <string name="_3_mention_order_number_in_payment_notes_or_memo">3) Please mention the order
        number in payment notes or memo.</string>
    <string name="_4_upload_payment_reference_number_or_payment_receipt">4) Upload payment reference number or payment
        receipt
    </string>
    <string name="terms">Terms</string>
    <string name="bank_name_">Bank name</string>
    <string name="account_name_">Account name</string>
    <string name="account_no">Account no.</string>
    <string name="ifsc_rtgs_neft">IFSC (RTGS/NEFT)</string>
    <string name="rate">Rate</string>
    <string name="fees">Fees</string>
    <string name="blog">Blog</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="order_no">Order no.</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="close">"Close"</string>
    <string name="status">Status</string>
    <string name="enter_pin_to_confirm_transaction">Enter PIN to confirm this transaction</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="_3_attempts_remaining">3 Attempts remaining</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="forgot_pin_"><![CDATA[<u>Forgot PIN?</u>]]></string>
    <string name="attepts_remainings">" Attempts remaining "</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="name">Name</string>
    <string name="SEN1">Paste %1$s address or scan QR code</string>
    <string name="barcode_reader">QrCode Reader</string>
    <string name="not_able_to_scan_qr_code">Unable to scan QR code</string>
    <string name="save_address">save address</string>
    <string name="update_address">update address</string>
    <string name="enter_address_label">Enter Address Label</string>
    <string name="enter_recipient_address">Enter Recipient Address</string>
    <string name="enter_destination_tag_memo">Enter Destination Tag/Memo</string>
    <string name="enter_beneficiary_name">Enter Beneficiary’s Full Name</string>
    <string name="select_beneficiary_platform">Select Beneficiary’s Platform</string>
    <string name="enter_platform_name">Enter Platform Name</string>
    <string name="search_platform">Search Platform</string>
    <string name="title_wlc_one">Buy/Sell Crypto Instantly</string>
    <string name="desc_wlc_one">Welcome Bonus</string>
    <string name="u20ac_10">€10</string>
    <string name="t_c">(T&amp;C)</string>
</resources>