<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/zebpay_main_blue"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:text="@string/verify_phone_screen_header_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:fontFamily="@font/open_sans_semibold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp">


                <androidx.cardview.widget.CardView
                    android:id="@+id/ll_register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/zebpay_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/zebpay_base_grey"
                            android:textSize="@dimen/_12ssp"
                            app:fontFamily="@font/open_sans_regular" />


                        <TextView
                            android:id="@+id/txt_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:text="@string/register"
                            android:textColor="@color/zebpay_main_blue"
                            android:textSize="@dimen/_12ssp"
                            app:fontFamily="@font/open_sans_semibold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/text_smsguid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="left"
                    android:text="@string/verify_phone_screen_lbl_desc_1"
                    android:textColor="@color/zebpay_base_grey"
                    android:textSize="@dimen/_11ssp"
                    app:fontFamily="@font/open_sans_regular" />

                <TextView
                    android:id="@+id/text_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/verify_phone_screen_lbl_desc_2"
                    android:textColor="@color/zebpay_base_grey"
                    android:textSize="@dimen/_11ssp"
                    app:fontFamily="@font/open_sans_regular" />


                <!--<LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"android:orientation="horizontal"></LinearLayout>-->

                <TextView
                    android:id="@+id/txt_country_list"
                    style="@style/SpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/zebpay_base_grey"
                    app:fontFamily="@font/open_sans_regular"
                    tools:text="India" />


                <LinearLayout
                    android:id="@+id/layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/txt_country_code"
                        style="@style/RoundedBorderedEditText"
                        android:layout_width="@dimen/_45sdp"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textColor="@color/zebpay_base_grey"
                        app:fontFamily="@font/open_sans_regular"
                        tools:text="91" />

<!--                    <zebpay.application.views.AutoFillEditText-->
<!--                        android:id="@+id/edit_mobileno"-->
<!--                        style="@style/RoundedBorderedEditText"-->
<!--                        android:layout_marginStart="@dimen/_7sdp"-->
<!--                        android:layout_marginLeft="@dimen/_7sdp"-->
<!--                        android:cursorVisible="true"-->
<!--                        android:ems="10"-->
<!--                        android:gravity="center"-->
<!--                        android:hint="@string/verify_phone_screen_number_txt_placeHolder"-->
<!--                        android:inputType="number"-->
<!--                        android:maxLength="16">-->

<!--                        <requestFocus />-->
<!--                    </zebpay.application.views.AutoFillEditText>-->
                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/llPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"

                    android:layout_marginBottom="20dp">

                    <CheckBox
                        android:id="@+id/cbTermConds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"

                        android:background="@android:color/transparent"
                        tools:checked="true" />

                    <TextView
                        android:id="@+id/text_term1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/cbTermConds"
                        android:gravity="left"
                        android:textColor="@color/zebpay_base_grey"
                        android:textSize="@dimen/_11ssp"
                        app:fontFamily="@font/open_sans_regular"
                        tools:text="Trading in bitcoins and cryptocurrencies is subject to market, technical and legal risks." />


                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/activity_verify_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_blue_rounded_drawable"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/verify_phone_screen_btn_accept_and_continue"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize_16sp"
                        app:fontFamily="@font/open_sans_semibold" />

                    <!-- <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginEnd="@dimen/_15sdp"
                         android:layout_marginRight="@dimen/_15sdp"
                         android:contentDescription="@null"
                         android:src="@drawable/ic_right_arrow" />-->
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_Disclaimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="@string/verify_phone_screen_note_lbl_title"
                        android:textColor="@color/zebpay_base_grey"
                        android:textSize="@dimen/_12ssp"
                        app:fontFamily="@font/open_sans_regular" />

                    <TextView
                        android:id="@+id/txt_disc_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:text="@string/verify_phone_screen_note_lbl_description"
                        android:textColor="@color/zebpay_light_grey"
                        android:textSize="@dimen/_11ssp"
                        app:fontFamily="@font/open_sans_regular" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>