<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_bottom_screen_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/ic_screen_1_1"/>

    <ImageView
        android:id="@+id/iv_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/iv_bottom_screen_1"
        app:layout_constraintEnd_toEndOf="@+id/iv_bottom_screen_1"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@drawable/ic_screen_1_2"/>

    <ImageView
        android:id="@+id/iv_grafity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bottom_screen_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/ic_screen_1_3"/>

    <ImageView
        android:id="@+id/iv_balloon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_plant"
        app:layout_constraintEnd_toEndOf="@+id/iv_grafity"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="@+id/iv_grafity"
        app:layout_constraintTop_toTopOf="@id/iv_grafity"
        app:srcCompat="@drawable/ic_screen_1_4"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bottom_screen_1"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:text="@string/title_wlc_one"
            android:textColor="@color/zebpay_base_grey"
            android:textSize="@dimen/_21ssp"
            app:fontFamily="@font/open_sans_semibold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal"
            android:visibility="gone">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@drawable/bg_rounded_solid_red"
                android:includeFontPadding="false"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/u20ac_10"
                android:textColor="@color/white"
                android:textSize="@dimen/_21ssp"
                app:fontFamily="@font/open_sans_semibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginBottom="0dp"
                android:includeFontPadding="false"
                android:text="@string/desc_wlc_one"
                android:textColor="@color/zebpay_base_grey"
                android:textSize="@dimen/_21ssp"
                app:fontFamily="@font/open_sans_semibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginBottom="0dp"
                android:includeFontPadding="false"
                android:text="@string/t_c"
                android:textColor="@color/zebpay_base_grey"
                android:textSize="@dimen/_10ssp"
                app:fontFamily="@font/open_sans_semibold"/>
        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>